--- a/LotusProject/Web.config
+++ b/LotusProject/Web.config
@@ -26,6 +26,7 @@
       </system.Web>
   -->
   <system.web>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
