--- a/LotusProject/LotusProject.csproj
+++ b/LotusProject/LotusProject.csproj
@@ -275,6 +275,7 @@
     <Content Include="Views\Store\ViewProduct.cshtml" />
     <Content Include="Views\Employee\EmployeeCenter.cshtml" />
     <Content Include="Views\Payment\Payment.cshtml" />
+    <Content Include="Views\Employee\Employees.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
